gift card backgrounds in css, fixed for sale page alignment

--- a/theposters-10487847/sass/gift-cards.scss
+++ b/theposters-10487847/sass/gift-cards.scss
@@ -22,6 +22,25 @@
 		@include display-flex;
 		@include flex-wrap(wrap);
 		@include justify-content(center);
+		form {
+			.image {
+				height: 286px;
+				width:286px;
+			}
+
+			&:nth-child(3n+1)  .image {
+				background:url('../assets/small-stripes.png') no-repeat transparent left center;
+			}
+			&:nth-child(3n+2) .image {
+				background:url('../assets/small-snake.png') no-repeat transparent left center;
+			}
+			&:nth-child(3n+3) .image {
+				background:url('../assets/small-dots.png') no-repeat transparent left center;
+			}
+		}
+
+		
+
 	}
 
 	.gift-card-details {
